RESOLVED FIXED101493
[V8] IntrusiveDOMWrapperMap is no longer needed and can be deleted
https://bugs.webkit.org/show_bug.cgi?id=101493
Summary [V8] IntrusiveDOMWrapperMap is no longer needed and can be deleted
Adam Barth
Reported 2012-11-07 11:15:58 PST
[V8] IntrusiveDOMWrapperMap is no longer needed and can be deleted
Attachments
Patch (9.32 KB, patch)
2012-11-07 11:17 PST, Adam Barth
haraken: review+
abarth: commit-queue-
Adam Barth
Comment 1 2012-11-07 11:17:06 PST
Adam Barth
Comment 2 2012-11-07 11:18:23 PST
Comment on attachment 172843 [details] Patch Please feel encouraged to review this patch, but I'd like to wait for http://build.chromium.org/f/chromium/perf/chromium-rel-win7-webkit/intl2/report.html?history=150&rev=-1&graph=ws_single_peak_r to cycle before landing it so I can separate out any regressions from http://trac.webkit.org/changeset/133783
Kentaro Hara
Comment 3 2012-11-07 11:21:18 PST
Comment on attachment 172843 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=172843&action=review > Source/WebCore/bindings/v8/DOMDataStore.cpp:79 > + object->clearWrapper(); ASSERT(!object->wrapper().IsEmpty()) ? > Source/WebCore/bindings/v8/DOMDataStore.h:66 > + return object->wrapper(); ASSERT(!object->wrapper().IsEmpty()) ? > Source/WebCore/bindings/v8/DOMDataStore.h:84 > protected: private:
Adam Barth
Comment 4 2012-11-07 11:24:29 PST
> > Source/WebCore/bindings/v8/DOMDataStore.h:84 > > protected: > > private: Thanks. You made this same comment the first time around. I just forgot to re-apply it. :)
Adam Barth
Comment 5 2012-11-07 11:25:39 PST
Comment on attachment 172843 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=172843&action=review >> Source/WebCore/bindings/v8/DOMDataStore.cpp:79 >> + object->clearWrapper(); > > ASSERT(!object->wrapper().IsEmpty()) ? clearWrapper already has that ASSERT: http://trac.webkit.org/browser/trunk/Source/WebCore/bindings/v8/ScriptWrappable.h#L56 >> Source/WebCore/bindings/v8/DOMDataStore.h:66 >> + return object->wrapper(); > > ASSERT(!object->wrapper().IsEmpty()) ? It might be empty if the Node doesn't have a wrapper yet.
Adam Barth
Comment 6 2012-11-07 12:49:39 PST
Note You need to log in before you can comment on or make changes to this bug.