[V8] IntrusiveDOMWrapperMap is no longer needed and can be deleted https://bugs.webkit.org/show_bug.cgi?id=101493

Reviewed by Kentaro Hara.

This patch is another incremental step towards landing the patch in bug
101110. In this patch, we delete IntrusiveDOMWrapperMap, which is no
longer needed.

* WebCore.gypi:
* bindings/v8/DOMDataStore.cpp:
(WebCore::DOMDataStore::DOMDataStore):
(WebCore::DOMDataStore::~DOMDataStore):
(WebCore::DOMDataStore::reportMemoryUsage):
(WebCore::DOMDataStore::weakCallback):
(WebCore):
* bindings/v8/DOMDataStore.h:
(WebCore::DOMDataStore::get):
(WebCore::DOMDataStore::set):
(DOMDataStore):
* bindings/v8/IntrusiveDOMWrapperMap.h: Removed.
* bindings/v8/V8GCController.cpp:


Canonical link: https://commits.webkit.org/119591@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133794 268f45cc-cd09-0410-ab3c-d52691b4dbfc