Source/WebCore/WebCore.gypi
@@ -2231,7 +2231,6 @@
             'bindings/v8/DateExtension.h',
             'bindings/v8/IDBBindingUtilities.cpp',
             'bindings/v8/IDBBindingUtilities.h',
-            'bindings/v8/IntrusiveDOMWrapperMap.h',
             'bindings/v8/JavaScriptCallFrame.cpp',
             'bindings/v8/JavaScriptCallFrame.h',
             'bindings/v8/NPObjectWrapper.cpp',
